--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-black text-white">
-    <nav class="w-5/6 flex justify-end items-center my-0 mx-auto italic">
-        <ul class=" bg-slate-900 flex p-5 justify-around items-center gap-3 list-none hover:transition-transform">
-            <li><a class="font-serif font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">HOME</a></li>
-            <li><a class="font-serif font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">DONATE</a></li>
-            <li><a class="font-serif font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">OUR PLAN</a></li>
-            <li><a class="font-serif font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">UPDATES</a></li>
-            <li><a class="font-serif font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">ABOUT US</a></li>
+    <!-- nav section start here -->
+    <nav class="w-full flex justify-end items-center my-0 mx-auto italic">
+        <ul class=" bg-slate-900 drop-shadow flex p-8 justify-around items-center gap-3 list-none hover:transition-transform">
+            <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">HOME</a></li>
+            <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">DONATE</a></li>
+            <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">OUR PLAN</a></li>
+            <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">UPDATES</a></li>
+            <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">ABOUT US</a></li>
         </ul>
     </nav>
+    <!-- banner section start here -->
+    <section class="w-full h-auto from-black bg-origin-content bg-fixed flex justify-center items-center gap-8 my-0 mx-auto bg-blend-darken backdrop-blur-lg bg-gradient-to-tr backdrop-saturate-0 backdrop-brightness-0 backdrop-opacity-5">
+        <div class="w-full h-auto flex flex-col justify-around items-center p-72 bg-blend-overlay bg-cover bg-scroll bg-no-repeat" style="background-image: url('./images/donation1.jpg');">
+            <h1 class="font-serif font-semibold text-5xl text-center text-stone-50 my-4">Let’s Help Those Who Are <br> More In Need</h1>
+            <p class="font-mono font-normal text-center text-gray-100 saturate-0 my-2 hover:text-slate-50 hover:bg-slate-950 hover:py-2 hover:px-3 hover:duration-500 hover:delay-300 hover:animate-pulse hover:ease-linear hover:transition-transform hover:rounded-md">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <button class="backdrop-blur-sm my-8 py-4 px-6 bg-red-500 resize-x rounded-md font-semibold font-sans hover:font-serif hover:transition-all hover:duration-300 hover:ease-in-out hover:delay-0 hover:animate-pulse">DONATE NOW</button>
+        </div>
+    </section>
 </body>
 </html>
