added the donate scetion

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </script>
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body class="bg-black text-white">
+<body>
     <!-- nav section start here -->
-    <nav class="w-full flex justify-end items-center my-0 mx-auto italic">
+    <nav class="w-full bg-black text-white flex justify-end items-center my-0 mx-auto italic">
         <ul class=" bg-slate-900 drop-shadow flex p-8 justify-around items-center gap-3 list-none hover:transition-transform sticky top-2 right-1">
             <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">HOME</a></li>
             <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">DONATE</a></li>
@@ -33,9 +33,29 @@
     <section class="w-full h-auto from-black bg-origin-content bg-fixed flex justify-center items-center gap-8 my-0 mx-auto bg-blend-darken backdrop-blur-lg bg-gradient-to-tr backdrop-saturate-0 backdrop-brightness-0 backdrop-opacity-5">
         <div class="w-full h-auto flex flex-col justify-around items-center p-72 bg-blend-overlay bg-cover bg-scroll bg-no-repeat" style="background-image: url('./images/donation1.jpg');">
             <h1 class="font-serif font-semibold text-5xl text-center text-stone-50 my-4">Let’s Help Those Who Are <br> More In Need</h1>
-            <p class="font-mono font-normal text-center text-gray-100 saturate-0 my-2 hover:text-slate-50 hover:bg-slate-950 hover:py-2 hover:px-3 hover:duration-500 hover:delay-300 hover:animate-pulse hover:ease-linear hover:transition-transform hover:rounded-md">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="font-mono font-normal text-center text-gray-300 saturate-0 my-2 hover:text-slate-50 hover:bg-slate-950 hover:py-2 hover:px-3 hover:duration-500 hover:delay-300 hover:animate-pulse hover:ease-linear hover:transition-transform hover:rounded-md">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
             <button class="backdrop-blur-sm my-8 py-4 px-6 bg-red-500 resize-x rounded-md font-semibold font-sans hover:font-serif hover:transition-all hover:duration-300 hover:ease-in-out hover:delay-0 hover:animate-pulse">DONATE NOW</button>
         </div>
     </section>
+    <!-- donate today section start here -->
+    <section class="w-11/12 flex flex-col justify-around items-center gap-4 my-10 mx-auto">
+        <div class="flex flex-col justify-evenly items-center gap-4">
+            <h1 class="font-serif font-bold from-neutral-950 text-5xl">Donate Today</h1>
+            <p class="text-center text-xl text-gray-500">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="flex justify-around items-center gap-8 my-8">
+            <p class="font-semibold cursor-pointer py-10 p-8 bg-gray-100 text-gray-400 rounded-lg text-4xl hover:border hover:border-solid hover:border-red-600 hover:text-red-500 hover:bg-red-100">100TK</p>
+            <p class="font-semibold cursor-pointer py-10 p-8 bg-red-100 text-red-500 border border-solid border-red-600 rounded-lg text-4xl">200TK</p>
+            <p class="font-semibold cursor-pointer py-10 p-8 bg-gray-100 text-gray-400  rounded-lg text-4xl hover:border hover:border-solid hover:border-red-600 hover:text-red-500 hover:bg-red-100">500TK</p>
+            <p class="font-semibold cursor-pointer py-10 p-8 bg-gray-100 text-gray-400 rounded-lg text-4xl hover:border hover:border-solid hover:border-red-600 hover:text-red-500 hover:bg-red-100">1000TK</p>
+            <p class="font-semibold cursor-pointer py-10 p-8 bg-gray-100 text-gray-400 rounded-lg text-4xl hover:border hover:border-solid hover:border-red-600 hover:text-red-500 hover:bg-red-100">5000TK</p>
+        </div>
+        <div class="w-4/5 flex flex-col justify-around items-center gap-4 mx-auto my-0">
+            <input class="border-none outline-none" type="text" name="" id="" placeholder="Other Amount (Taka)">
+            <hr class="w-4/5">
+            <button class="backdrop-blur-sm my-8 py-4 px-6 bg-red-500 resize-x rounded-md font-semibold font-sans hover:font-serif hover:transition-all hover:duration-300 hover:ease-in-out hover:delay-0 hover:animate-pulse">DONATE NOW</button>
+        </div>
+    </section>
+    
 </body>
 </html>
