add the our plan & they need us to survive section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,54 @@
             <button class="backdrop-blur-sm my-8 py-4 px-6 bg-red-500 resize-x rounded-md font-semibold font-sans hover:font-serif hover:transition-all hover:duration-300 hover:ease-in-out hover:delay-0 hover:animate-pulse">DONATE NOW</button>
         </div>
     </section>
-    
+    <!-- our donate plan section start here -->
+    <section>
+        <div>
+            <h1>Our Donate Plan</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div>
+            <div>
+                <img src="./icons/food.png" alt="images food">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
+            </div>
+            <div>
+                <img src="./icons/shelter.png" alt="shelter family">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
+            </div>
+            <div>
+                <img src="./icons/Frame-1.png" alt="frames for images">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Their lives depend on your donation and They need us to survive section strat here -->
+    <section>
+        <div>
+          <div>
+            <h2>Their lives depend on your donation</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
+            <button>How to Contribute?</button>
+          </div>
+          <div>
+            <img src="./images/donation6.jpg" alt="">
+          </div>
+        </div>
+        <div>
+            <div>
+                <img src="./images/donation2.jpg" alt="">
+            </div>
+            <div>
+                <h2>They need us <br> to survive</h2>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
+                <button>How to Contribute?</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
