added the styles for our donate plan in this commit

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="w-11/12 flex flex-col justify-around items-center gap-4 my-10 mx-auto">
         <div class="flex flex-col justify-evenly items-center gap-4">
             <h1 class="font-serif font-bold from-neutral-950 text-5xl">Donate Today</h1>
-            <p class="text-center text-xl text-gray-500">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
         </div>
         <div class="flex justify-around items-center gap-8 my-8">
             <p class="font-semibold cursor-pointer py-10 p-8 bg-gray-100 text-gray-400 rounded-lg text-4xl hover:border hover:border-solid hover:border-red-600 hover:text-red-500 hover:bg-red-100">100TK</p>
@@ -57,26 +57,26 @@
         </div>
     </section>
     <!-- our donate plan section start here -->
-    <section>
-        <div>
-            <h1>Our Donate Plan</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+    <section class="w-11/12 my-16 mx-auto grid grid-cols-1 justify-center items-center gap-5 relative">
+        <div class="flex flex-col justify-between items-center gap-2">
+            <h1 class="font-serif font-extrabold text-5xl text-slate-950">Our Donate Plan</h1>
+            <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
         </div>
-        <div>
-            <div>
-                <img src="./icons/food.png" alt="images food">
-                <h3>Food for a family</h3>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
+        <div class="grid grid-cols-3 justify-evenly items-center gap-5 my-10">
+            <div class="flex flex-col justify-around items-start gap-2 bg-emerald-50 py-16 px-8">
+                <img class="hover:bg-blend-hue hover:bg-red-200 rounded-full hover:ring-offset-fuchsia-300" src="./icons/food.png" alt="images food">
+                <h3 class="font-serif font-semibold text-4xl py-4">Food for a family</h3>
+                <p class="text-xl text-gray-500 font-serif">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
             </div>
-            <div>
-                <img src="./icons/shelter.png" alt="shelter family">
-                <h3>Shelter for a family</h3>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
+            <div class="flex flex-col justify-around items-start gap-2 bg-red-100 py-16 px-8">
+                <img class="hover:bg-blend-hue hover:bg-red-200 hover:ring-offset-fuchsia-300" src="./icons/shelter.png" alt="shelter family">
+                <h3 class="font-serif font-semibold text-3xl py-4">Shelter for a family</h3>
+                <p class="text-xl text-gray-500 font-serif">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
             </div>
-            <div>
-                <img src="./icons/Frame-1.png" alt="frames for images">
-                <h3>Education for a child</h3>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
+            <div class="flex flex-col justify-around items-start gap-2 bg-yellow-100 py-16 px-8">
+                <img class="hover:bg-blend-hue hover:bg-red-200 hover:ring-offset-fuchsia-300" src="./icons/Frame-1.png" alt="frames for images">
+                <h3 class="font-serif font-semibold text-3xl py-4">Education for a child</h3>
+                <p class="text-xl text-gray-500 font-serif">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit officia consequat duis enim <br> velit mollit.</p>
             </div>
         </div>
     </section>
@@ -84,9 +84,9 @@
     <section>
         <div>
           <div>
-            <h2>Their lives depend on your donation</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
+            <h2 class="font-serif font-extrabold text-5xl text-slate-950">Their lives depend on <br> your donation</h2>
+            <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
+            <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
             <button>How to Contribute?</button>
           </div>
           <div>
@@ -98,9 +98,9 @@
                 <img src="./images/donation2.jpg" alt="">
             </div>
             <div>
-                <h2>They need us <br> to survive</h2>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
+                <h2 class="font-serif font-extrabold text-5xl text-slate-950">They need us <br> to survive</h2>
+                <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
+                <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
                 <button>How to Contribute?</button>
             </div>
         </div>
