added the their lives and help from us section styles

--- a/index.html
+++ b/index.html
@@ -81,27 +81,28 @@
         </div>
     </section>
     <!-- Their lives depend on your donation and They need us to survive section strat here -->
-    <section>
-        <div>
+    <section class="w-11/12 my-16 mx-auto flex flex-col justify-center items-center gap-14 relative">
+        <div class="flex justify-normal items-center gap-64">
           <div>
-            <h2 class="font-serif font-extrabold text-5xl text-slate-950">Their lives depend on <br> your donation</h2>
-            <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
-            <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
-            <button>How to Contribute?</button>
+            <h2 class="font-serif font-bold text-4xl text-slate-800">Their lives depend on <br> your donation</h2>
+            <p class="text-xl text-gray-500 font-serif py-4">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
+            <p class="text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
+            <button class="backdrop-blur-sm my-8 py-4 px-6 bg-red-500 resize-x rounded-md font-semibold font-sans hover:font-serif hover:transition-all hover:duration-300 hover:ease-in-out hover:delay-0 hover:animate-pulse">How to Contribute?</button>
           </div>
-          <div>
+          <div class="w-5/12">
             <img src="./images/donation6.jpg" alt="">
           </div>
         </div>
-        <div>
-            <div>
+        <div class="flex justify-normal items-center gap-64">
+            <div class="w-5/12">
+               <!-- <span class="hover:block" ><img class="hidden" src="./images/donation3.jpg" alt=""></span> not working, why!!!!! -->
                 <img src="./images/donation2.jpg" alt="">
             </div>
-            <div>
-                <h2 class="font-serif font-extrabold text-5xl text-slate-950">They need us <br> to survive</h2>
-                <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
-                <p class="text-center text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
-                <button>How to Contribute?</button>
+            <div class="relative right-16 items-start">
+                <h2 class="font-serif font-bold text-4xl text-slate-800">They need us <br> to survive</h2>
+                <p class="text-xl text-gray-500 font-serif py-4">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset. No duo populo <br> animal noluisse, enim</p>
+                <p class="text-xl text-gray-500 font-serif">Lorem ipsum dolor sit amet, usu cu esse possit <br> referrentur, at eam falli deterruisset.</p>
+                <button class="backdrop-blur-sm my-8 py-4 px-6 bg-red-500 resize-x rounded-md font-semibold font-sans hover:font-serif hover:transition-all hover:duration-300 hover:ease-in-out hover:delay-0 hover:animate-pulse">How to Contribute?</button>
             </div>
         </div>
     </section>
