--- a/index.html
+++ b/index.html
@@ -106,5 +106,11 @@
             </div>
         </div>
     </section>
+
+    <!-- footer scetion start here -->
+    <footer class="bg-black p-16 my-4 mx-auto flex flex-col justify-between items-center ">
+        <h2 class="text-4xl text-red-500 font-serif font-extrabold italic">BE HUMBLE</h2>
+        <p class="text-slate-400">I'm gonna do it</p>
+    </footer>
 </body>
 </html>
