added the my updates section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,21 @@
             </div>
         </div>
     </section>
-
+    <!-- get my updates section start here -->
+    <section class="w-11/12 flex flex-col justify-between items-center gap-10 my-14 mx-auto">
+        <div class="flex  flex-col justify-between items-center gap-2">
+            <h1 class="font-serif font-bold from-neutral-900 text-5xl m-1">Get My Updates</h1>
+            <p class="text-center text-xl text-gray-500 font-serif py-2">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="bg-red-100 py-6 px-40">
+            <form action="#">
+                <label for="">
+                    <input class="p-3 bg-slate-200 rounded-md" type="email" name="" id="" placeholder="email">
+                </label>
+                <button class="backdrop-blur-sm my-8 py-3 px-7 bg-red-500 rounded-md font-semibold font-sans relative bottom-0 -left-2">Subscribe</button>
+            </form>
+        </div> 
+    </section>
     <!-- footer scetion start here -->
     <footer class="bg-black p-16 my-4 mx-auto flex flex-col justify-between items-center ">
         <h2 class="text-4xl text-red-500 font-serif font-extrabold italic">BE HUMBLE</h2>
