added the changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- nav section start here -->
     <nav class="w-full bg-black text-white flex justify-end items-center my-0 mx-auto italic">
-        <ul class=" bg-slate-900 drop-shadow flex p-8 justify-around items-center gap-3 list-none hover:transition-transform sticky top-2 right-1">
+        <ul class="bg-slate-900 drop-shadow flex p-8 justify-around items-center gap-3 list-none hover:transition-transform sticky top-2 right-1">
             <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">HOME</a></li>
             <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">DONATE</a></li>
             <li><a class="font-serif text-xl font-semibold no-underline tracking-normal hover:font-bold hover:font-sans hover:text-4xl hover:transition-transform" href="#">OUR PLAN</a></li>
@@ -115,7 +115,7 @@
         <div class="bg-red-100 py-6 px-40">
             <form action="#">
                 <label for="">
-                    <input class="p-3 bg-slate-200 rounded-md" type="email" name="" id="" placeholder="email">
+                    <input class="p-3 bg-slate-200 rounded-md outline-none" type="email" name="" id="" placeholder="email" required>
                 </label>
                 <button class="backdrop-blur-sm my-8 py-3 px-7 bg-red-500 rounded-md font-semibold font-sans relative bottom-0 -left-2">Subscribe</button>
             </form>
